Bug 1080360 - Add firing lostpointercapture event on document instead of on removed capturing element. r=smaug